2025-06-01 14:25
- Tentative first release of probability calculator. No guarantee of correctness whatsoever.

2025-05-27 09:30
- Introduced interactive zoomable and draggable map of the publicly discovered universe

2025-05-26 20:15
- Optimizer has been reworked once again. Should work for everybody now. If you have troubles obtaining good results, reach out to me. Dragon is not yet included in total credits and experience. 

2025-05-26 09:17
- Introduced tab visaulization and tab "Universe Map"

2025-05-25 16:34
- Included API endpoint for fast player data import

2025-05-25 11:50
- Updates NPC values scaling as per new patch 

2025-05-19 12:58
- Added link to Kontors' resources calculator

2025-05-16 08:14
- Added Squadron boost to income and experience results. Slight differences between simulator and in game log are due to rounding errors

2025-05-15 20:48
- Added resources gathering calculator

2025-05-09 16:32
- It is now possible to select the number of fights for each stat combination being tested in the optimization 

2025-05-08 19:32
- Added local memory for last settings used. Settings should be kept in memory after refreshing

2025-05-05 15:45
- Fixed a bug with experience for higher levels
- Improved the optimizer in the case where number of drones is smaller than 5 

2025-05-04 20:34
- Improved the optimization logic, should now produce much better results than before (but are they optimal? who knows!). Thanks to kontors and Maliciousism for their suggestions
 
2025-05-04 13:16

- Introduced Changelog
- Maximum number of fights in Simulation is now 1'000'000. Any number bigger than that will result in 1'000'000 fights being executed anyway
- Added experience per hour and per day in Simulation and Optimization results
- If the second field of weapon or shield modification is left blank, it is assumed that both slots have been used for the same modification 